--- a/webroot/css/cake.css
+++ b/webroot/css/cake.css
@@ -169,9 +169,12 @@ th {
     padding: 0;
     margin: 0 0 1rem;
 }
+
+/*
 .pagination li {
     margin: 0 0.5rem;
 }
+*/
 .prev.disabled a,
 .next.disabled a {
     cursor: not-allowed;
