--- a/webroot/css/common.css
+++ b/webroot/css/common.css
@@ -156,6 +156,12 @@ form .required .control-label:after
 	padding				: 10px;
 }
 
+.ib-breadcrumb ul
+{
+	list-style-type		: none;
+	padding				: 0px;
+}
+
 .ib-horizontal .input
 {
 	float				: left;
