パンくずリストのスタイルを追加

--- a/webroot/css/common.css
+++ b/webroot/css/common.css
@@ -236,6 +236,12 @@ form .required .control-label:after
 	padding				: 5px;
 }
 
+.ib-breadcrumbs
+{
+	margin-bottom			: 0px;
+	padding-inline-start	: 10px
+}
+
 .ib-breadcrumbs li
 {
 	display				: inline;
